--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@mui/styled-engine-sc": "^6.1.9",
+    "@react-pdf/renderer": "^4.1.6",
     "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +17,8 @@
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "material-react-table": "^3.1.0",
     "mui-one-time-password-input": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
